feat: Enhance voice-to-sign language converter with ASL image dataset integration
- Suppressed verbose logging for Vosk to improve user experience.
- Added Kaggle ASL image dataset as a lightweight alternative to WLASL videos.
- Implemented functions to generate ASL images and GIFs from text input.
- Created scripts for downloading both Kaggle and WLASL datasets.
- Updated demo scripts and setup guides for clarity and ease of use.
- Added verification script to ensure all dependencies and models are correctly installed.
- Improved user prompts and error handling throughout the application.

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,8 @@ ENV/
 
 # Vosk speech recognition models (large, downloadable)
 vosk-model-*/
-vosk-model-en-us-*/
-vosk-model-fr-*/
-vosk-model-ar-*/
-
+kaggle_asl_dataset/
+vosk-model-en-us-0.22/
 # Generated ASL output videos
 asl_outputs/
 *.mp4
