--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
-vosk>=0.3.45
+# Speech Recognition (Faster-Whisper - recommended)
+faster-whisper>=1.0.0
+ctranslate2>=4.0.0
+
+# Audio Processing
 sounddevice>=0.4.6
 numpy>=1.24.0
-moviepy>=1.0.3
-num2words>=0.5.12
-arabic-reshaper>=3.0.0
-python-bidi>=0.4.2
-openai-whisper>=20231117
 pyaudio>=0.2.13
+
+# Video Processing
+moviepy>=2.0.0
+
+# Dataset Management
+kagglehub>=0.2.0
+
+# Image Processing (for fallback)
+Pillow>=10.0.0
+
